k8s-training/hands-on2/01_redis-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: ######
        role: #####
        tier: #####
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
