k8s-training/hands-on2/02_redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
    ##########
  selector:
    app: redis
    role: master
    tier: backend
